--- a/motor/styles/main.css
+++ b/motor/styles/main.css
@@ -19,7 +19,28 @@ input[type=number]{
 	height: 75px;
 	font-size: 16px;
 	margin-top: 10px;
+	background: linear-gradient(to bottom right, red, black);
+    color:white;
+	border-radius: 20px;
 }
+
+.titolmenu{
+
+   margin: auto;
+   margin-bottom: 50px;
+   width: 100%;
+   height: 75px;
+   font-size: 20px;
+   font-size: 26px;
+   line-height: 75px;
+   background: linear-gradient(120deg, red, black);
+   color: white;
+   border-radius: 25px;
+
+
+}
+
+
 
 p{
 	text-align: center;
@@ -37,3 +58,6 @@ button.menu-object:hover:not(:active){
 	height: 85px;
 }
 
+body{
+	background-color: wheat;
+}
