--- a/motor/styles/main.css
+++ b/motor/styles/main.css
@@ -11,53 +11,164 @@ input[type=number]{
 	line-height: 75px;
 }
 
+#rank{
+
+	display: block;
+    margin: auto;
+	width: 100px;
+	height: 50px;
+	filter: drop-shadow(0 0 15px #db3eb1) drop-shadow(0 0 50px #db3eb1) contrast(2) brightness(2);
+	background: #db3eb1;
+	font-family: 'Raleway', cursive;
+	font-size: 16px;
+	margin-top: 10px;
+	text-shadow:
+			0 0 7px #fff,
+			0 0 10px #fff,
+			0 0 21px #fff,
+			0 0 42px #f09,
+			0 0 82px #f09,
+			0 0 92px #f09,
+			0 0 102px #f09,
+			0 0 151px #f09;
+	border-radius: 20px;
+
+
+}
+
+
+#numeracio{
+
+	font-size: 20px;
+
+
+
+}
+
+
+
 .menu-object{
 	display:block;
 	margin-left: auto;
 	margin-right: auto;
 	width: 300px;
 	height: 75px;
+	filter: drop-shadow(0 0 15px #db3eb1) drop-shadow(0 0 50px #db3eb1) contrast(2) brightness(2);
+	background: #db3eb1;
+	font-family: 'Raleway', cursive;
 	font-size: 16px;
 	margin-top: 10px;
-	background: linear-gradient(to bottom right, red, black);
-    color:white;
+	text-shadow:
+			0 0 7px #fff,
+			0 0 10px #fff,
+			0 0 21px #fff,
+			0 0 42px #f09,
+			0 0 82px #f09,
+			0 0 92px #f09,
+			0 0 102px #f09,
+			0 0 151px #f09;
 	border-radius: 20px;
 }
-
-.titolmenu{
-
-   margin: auto;
-   margin-bottom: 50px;
-   width: 100%;
-   height: 75px;
-   font-size: 20px;
-   font-size: 26px;
-   line-height: 75px;
-   background: linear-gradient(120deg, red, black);
-   color: white;
-   border-radius: 25px;
-
-
-}
-
 
 
 p{
 	text-align: center;
 }
 
-button.menu-object:active{
+
+body {
 	font-size: 18px;
-	width: 275px;
-	height: 70px;
+	font-family: "Vibur", sans-serif;
+	background-color: #010a01;
+}
+.button {
+	color: #db3eb1;
+	width: 250px;
+	text-align: center;
+	margin: auto;
+	margin-top: 15px;
+	border: 6px solid #db3eb1;
+	border-radius:15px;
+	padding: 15px 25px;
+	font-size: 30px;
+	font-family: tahoma;
+	letter-spacing:5px;
+	cursor: pointer;
+	font-weight: bold;
+	filter: drop-shadow(0 0 15px #db3eb1) drop-shadow(0 0 50px #db3eb1) contrast(2) brightness(2);
+	transition: .5s;
 }
 
-button.menu-object:hover:not(:active){
-	font-size: 22px;
-	width: 325px;
-	height: 85px;
+.button:hover {
+	color: black;
+	background-color: #db3eb1;
+	filter: drop-shadow(0 0 20px #db3eb1) contrast(2) brightness(2);
 }
 
-body{
-	background-color: wheat;
+
+.neon {
+	color: #fff;
+	text-shadow:
+			0 0 7px #fff,
+			0 0 10px #fff,
+			0 0 21px #fff,
+			0 0 42px #f09,
+			0 0 82px #f09,
+			0 0 92px #f09,
+			0 0 102px #f09,
+			0 0 151px #f09;
 }
+h1, h2 {
+	text-align: center;
+	font-weight: 400;
+	line-height: 1;
+}
+
+h1 {
+	font-size: 6.2rem;
+	animation: pulsate 0.11s ease-in-out infinite alternate;
+}
+
+h2 {
+	font-size: 1.8rem;
+}
+
+
+@keyframes pulsate {
+
+	100% {
+
+		text-shadow: 0 0 4px #fff,
+		0 0 11px #fff,
+		0 0 19px #fff,
+		0 0 40px #f09,
+		0 0 80px #f09,
+		0 0 90px #f09,
+		0 0 100px #f09,
+		0 0 150px #f09;
+
+	}
+
+	0% {
+
+		text-shadow: 0 0 4px #fff,
+		0 0 10px #fff,
+		0 0 18px #fff,
+		0 0 38px #f09,
+		0 0 73px #f09,
+		0 0 80px #f09,
+		0 0 94px #f09,
+		0 0 140px #f09;
+
+	}
+
+}
+
+
+
+
+
+
+
+
+
